--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "homepage": "https://github.com/valeriangalliat/es6-denodeify",
   "bugs": "https://github.com/valeriangalliat/es6-denodeify/issues",
 
-  "license": {
-    "type": "Unlicense",
-    "url": "http://unlicense.org/"
-  },
+  "license": "Unlicense",
 
   "author": {
     "name": "Valérian Galliat",
